@@ -1,6 +1,7 @@
 Upcoming:
 - Fixed a problem with the builder when copying a wither structure it would duplicate one wither skull
 - Blocks with the tag 'dontremoveme' didn't let the Builder consume power
+- Fixed the shield not updating when redstone is toggled
 
 1.16-3.1.10:
 - Added a new block tag rftoolsbuilder:dontremoveme which the Builder will respect and in which case the Builder will not remove the block (or replace with dirt)
